<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blueish_green">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar5"
        android:layout_width="418dp"
        android:layout_height="74dp"
        android:background="@color/blueish_green"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/button_back4"
        android:layout_width="48dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/image_content_descr"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar5"
        app:layout_constraintEnd_toEndOf="@+id/toolbar5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buying_form"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar5"
        app:layout_constraintEnd_toEndOf="@+id/toolbar5"
        app:layout_constraintStart_toStartOf="@+id/toolbar5"
        app:layout_constraintTop_toTopOf="@+id/toolbar5" />

    <EditText
        android:id="@+id/editTextTextPostalAddress"
        android:layout_width="341dp"
        android:layout_height="56dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:autofillHints="@string/address_example"
        android:hint="@string/address_example"
        android:textColor="@color/white"
        android:background="@color/bright_blueish_green"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="335dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:autofillHints="@string/FIO_example"
        android:hint="@string/FIO_example"
        android:textColor="@color/white"
        android:background="@color/bright_blueish_green"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar5" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/address"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.612" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="340dp"
        android:layout_height="58dp"
        android:layout_marginBottom="320dp"
        android:ems="10"
        android:inputType="phone"
        android:autofillHints="@string/phone_example"
        android:hint="@string/phone_example"
        android:textColor="@color/white"
        android:background="@color/bright_blueish_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/FIO"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar5"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/phone"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress"
        app:layout_constraintVertical_bias="0.655" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="377dp"
        android:layout_height="104dp"
        android:gravity="center"
        android:text="@string/buying_warning"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/finish_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        app:layout_constraintVertical_bias="0.809" />

    <Button
        android:id="@+id/finish_button"
        android:layout_width="377dp"
        android:layout_height="77dp"
        android:text="@string/buying_button"
        android:textSize="20sp"
        app:backgroundTint="@color/bright_blueish_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957" />

</androidx.constraintlayout.widget.ConstraintLayout>