<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="0dp"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="0dp"
    android:background="@color/white"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="horizontal"
    android:padding="20dp">

    <ImageView
        android:id="@+id/image_basketitem"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/image_content_descr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/minus"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/minus"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@drawable/ic_baseline_horizontal_rule_24"
        app:backgroundTint="@color/bright_blueish_green"
        app:layout_constraintBottom_toBottomOf="@+id/quantity_basketitem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toEndOf="@+id/price_basketitem"
        app:layout_constraintTop_toTopOf="@+id/quantity_basketitem"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/plus"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_baseline_add_24"
        android:text="@string/plus"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@drawable/ic_baseline_add_24"
        app:backgroundTint="@color/bright_blueish_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.752"
        app:layout_constraintStart_toEndOf="@+id/minus"
        app:layout_constraintTop_toBottomOf="@+id/name_basketitem"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/price_basketitem"
        android:layout_width="88dp"
        android:layout_height="27dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:gravity="end"
        android:text="@string/dollars_format"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_basketitem"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/quantity_basketitem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/quantity"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/plus"
        app:layout_constraintEnd_toStartOf="@+id/plus"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/minus"
        app:layout_constraintTop_toTopOf="@+id/plus"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/description_basketitem"
        android:layout_width="235dp"
        android:layout_height="47dp"
        android:layout_weight="0.1"
        android:text="@string/medicine1_descr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_basketitem"
        android:layout_width="248dp"
        android:layout_height="29dp"
        android:text="@string/medicine1"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>